optimize codebase